# esp32_bt_player

./: CMakeLists.txt  custom_partitions.csv  readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bt_a2dp.c  bt_avrcp.c  bt_gap.c  dsp_lut_gen.py  main.c  main.h  stereo_codec.h  stereo_codec_audio.c  stereo_codec_ctr.c  task_hub.c  task_hub.h
main/app/: app.c  app.h  app_config.h  app_tools.h  dsp.c  dsp.h  dsp_fft_lut.c  file_system.c  file_system.h  main.c  storage.c  storage.h  task_hub.c  task_hub.h  tasks.c  tasks.h
main/bluetooth/: bt_a2dp.c  bt_a2dp.h  bt_avrcp.c  bt_avrcp.h  bt_gap.c  bt_gap.h  bt_profiles.h
main/codec/: ach.h  ach_ctr.c  ach_player.c  ach_reg.h  stereo_codec.h  stereo_codec_ctr.c  stereo_codec_data.c  stereo_codec_lut.c  stereo_codec_reg.h  wm8960_lut.c
main/hotspot/: dns_server.c  dns_server.h  web.h  web_core.c  web_file.c  web_ws.c  wifi.c  wifi.h
main/light/: color.c  color.h  led_matrix.c  led_matrix.h  led_std.c  led_std.h  lights.c  lights.h  ws281x.c
main/spiffs_files/web/: classes.js  com.js  index.html  main.css  main.js
